--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
-/cssa-mini/.hbuilderx/
-/cssa-mini/.vite/
-/cssa-mini/unpackage/
+.hbuilderx/
+.vite/
+unpackage/
 .DS_Store
 .env
 node_modules
