refactor the project to unify api request and remove unused page

--- a/manifest.json
+++ b/manifest.json
@@ -59,7 +59,8 @@
         "uniStatistics" : {
             "enable" : true
         },
-		"__usePrivacyCheck__": true
+		"__usePrivacyCheck__": true,
+		"libVersion": "latest"  
     },
     "vueVersion" : "3"
 }
